
JBIG-KIT revision history
-------------------------


Changes in version 2.1 (2014-04-08)

This is a security-critical bug-fix release that remains API and ABI
backwards compatible to version 2.0. Users who process BIE data from
untrusted sources should upgrade.

  - fixed a buffer-overflow vulnerability in the jbig.c decoder,
    reported by Florian Weimer (Red Hat): CVE-2013-6369

  - fixed ability of corrupted input data to force jbig85.c decoder
    into an end-less loop

  - fixed a bug in the processing of private deterministic-prediction
    tables (DPPRIV=1) in jbig.c decoder

  - fixed integer-type mismatches in printf arguments on 64-bit systems

  - fuzz-testing script added


Changes in version 2.0 (2008-08-30)

Main new features of release 2.0:

  - This release adds a separate lightweight "T.85" version of the
    encoder and decoder library (jbig85.c, jbig85.h). This new T.85
    library is optimized for embedded low-memory applications, such as
    printers and fax machines. It implements only the subset of the
    JBIG standard that is required by the ITU-T T.85 fax profile,
    namely only a single bit plane (P = 1) and no differential layers
    (DL = D = HITOLO = SEQ = ILEAVE = SMID = TPDON = DPON = DPON =
    DPLAST = 0) and some other restrictions (MY = 0, MX < 128).

    The T.85 library requires only three pixel rows of the
    uncompressed image to reside in memory at any time. This 3-line
    buffer has to be allocated by the calling application, therefore
    the T.85 library will not call any heap management functions such
    as malloc() or free() itself. It can fully deal with endless-paper
    fax, where the height of the encoded image is not known initially.

  - There are also two new example applications pbmtojbg85 and
    jbgtopbm85 included that provide command-line access to the new
    T.85 library.

API changes in 2.0 to the original full jbig.c library (compared to 1.6):
